--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "ghdeploy": "gh-pages -d build",
+    "deploy": "scp -r ./build/*  vladimir@158.160.131.61:/home/vladimir/frontend"
   },
   "eslintConfig": {
     "extends": [
